# ox-ctrl

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  README.txt  cmd_args.c  core.c  lightnvm.c  nvme.c  nvme_cmd.c  ox-mq.c  ox_cmdline.c
core/: admin.c  cmd_args.c  core-exec.c  core-init.c  lightnvm.c  nvme_ctrl.c  nvmef_ctrl.c  ox-memory.c  ox-mq-output.c  ox-mq.c  ox-stats.c  ox_cmdline.c
ftl/: ftl_common.c
ftl/appnvm/: app_channels.c  app_core.c  appnvm.h
ftl/appnvm/block/: app_bbtbl.c  app_blk_md.c  app_ch_map.c  app_ch_prov.c  app_gc.c  app_gl_map.c  app_gl_prov.c  app_lba_io.c  app_ppa_io.c
ftl/lnvm/: ftl_lnvm.c  ftl_lnvm.h  lnvm_bbtbl.c  lnvm_ftl.c  lnvm_ftl.h
ftl/ox-app/: app-cache.c  app-channels.c  app-core.c  app-hmap.c  app-transaction.c  ox-app.h
ftl/ox-app/block/: oxb-bbtbl.c  oxb-blk-md.c  oxb-ch-map.c  oxb-ch-prov.c  oxb-gc.c  oxb-gl-map.c  oxb-gl-prov.c  oxb-lba-io.c  oxb-log.c  oxb-ppa-io.c  oxb-recovery.c
ftl/ox-app/block/non-recoverable/: oxb-blkmd-nr.c  oxb-chmap-nr.c
fuse/: fuse-bigfile.c  fuse-ox-nvme.c
host/: nvme-host-dev.h  nvme-host.h  nvme_host.c
include/: cmdline.h  libox.h  lightnvm.h  nvme.h  nvmef.h  ox-cmdline.h  ox-lightnvm.h  ox-mq.h  ox-uatomic.h  ssd.h  tests.h  uatomic.h
mmgr/: mmgr_common.c
mmgr/dfc_nand/: dfc_nand.c  dfc_nand.h  nand_dma.c
mmgr/dfc_nand/fpga_2_05_04/: nand_dma.c  nand_dma.h
mmgr/dfc_nand/fpga_3_01_00/: nand_dma.c  nand_dma.h
mmgr/file-be/: file-be.c  file-be.h
mmgr/fpga-3.0.1/: fpga-3_0_1.c  fpga-3_0_1.h  nand_dma.c  nand_dma.h
mmgr/ocssd-1.2/: ocssd-1_2.c  ocssd-1_2.h
mmgr/ocssd-2.0/: ocssd-2_0.c  ocssd-2_0.h
mmgr/volt/: volt.c  volt.h
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
parser/: fabrics_parser.c  lnvm_parser.c  nvme_parser.c
pcie_dfc/: pcie_dfc.c  pcie_dfc.h
targets/: ox-ctrl-nvme-filebe.c  ox-ctrl-nvme-ocssd.c  ox-ctrl-nvme-ocssd2.c  ox-ctrl-nvme-volt.c
test/: test-connect.c  test-nvme-rw.c  test-nvme-thput-r.c  test-nvme-thput-w.c  test-ox-mq.c  test-queue.c  test_admin.c  test_core.c  test_lightnvm.c  test_mmgr.c
transport/ox-fabrics/: ox-fabrics.c  ox-fabrics.h  ox-host.c  tcp-client.c  tcp-server.c  udp-client.c  udp-server.c
transport/pci_fpga_3.0.1/: pci_fpga_301.c  pci_fpga_301.h
